mobile hr1 & 2 spacing fix

--- a/webphone.css
+++ b/webphone.css
@@ -25,11 +25,11 @@ input[type="submit"]{
 }
 #hr1{
         margin-top: 20%;
-	margin-bottom: 10% !important;
+	margin-bottom: 5% !important;
 	clear: both !important;
 }
 #hr2{
-        margin-top: 18% !important;
+        margin-top: 5% !important;
 	clear: both !important;
 }
 #text{
@@ -51,8 +51,6 @@ input[type="submit"]{
 }
 #sub1{
 	width: 100%;
-	margin-top: 10% !important;
-	margin-bottom: 18% !important;
 	clear: left !important;
 	clear: right !important;
 }
